--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/leaflet.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div class="container-fluid">
@@ -32,7 +31,7 @@
             <!-- content | map -->
             <div class="row">
                 <!-- Visualization placeholders -->
-                <div id="station-map"></div>
+                <div id="barvis"></div>
             </div>
         </div>
     </div>
@@ -47,7 +46,7 @@
 
 
 <!-- Visualization objects -->
-<script src="js/stationMap.js"></script>
+<script src="js/barVis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
