--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="row">
                 <!-- Visualization placeholders -->
                 <div id="barvis"></div>
+                <div id="clustervis">cluster viz placeholder</div>
+                <div id="chordvis">chord viz placeholder</div>
+                <div id="spidervis">spider viz placeholder</div>
             </div>
         </div>
     </div>
