acquisition viz and started brush

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <!-- content | map -->
             <div class="row">
                 <!-- Visualization placeholders -->
+                <div id="countvis"></div>
                 <div id="barvis"></div>
                 <div id="clustervis">cluster viz placeholder</div>
                 <div id="chordvis">chord viz placeholder</div>
@@ -50,6 +51,7 @@
 
 <!-- Visualization objects -->
 <script src="js/barVis.js"></script>
+<script src="js/countVis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
