initial template for sankey vis

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="countvis"></div>
                 <div id="barvis"></div>
                 <div id="clustervis">cluster viz placeholder</div>
-                <div id="chordvis">chord viz placeholder</div>
+                <div id="sankeyvis"></div>
                 <div id="spidervis">spider viz placeholder</div>
             </div>
         </div>
@@ -47,11 +47,13 @@
 
 <!-- d3 -->
 <script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://unpkg.com/d3-sankey@0"></script>
 
 
 <!-- Visualization objects -->
 <script src="js/barVis.js"></script>
 <script src="js/countVis.js"></script>
+<script src="js/sankeyVis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
