--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!-- Visualization placeholders -->
                 <div id="countvis"></div>
                 <div id="barvis"></div>
-                <div id="clustervis">cluster viz placeholder</div>
+<!--                <div id="clustervis">cluster viz placeholder</div>-->
                 <div id="sankeyvis"></div>
                 <div id="spidervis">spider viz placeholder</div>
             </div>
@@ -48,6 +48,7 @@
 <!-- d3 -->
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://unpkg.com/d3-sankey@0"></script>
+<!--<script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>-->
 
 
 <!-- Visualization objects -->
