example spider vis success

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <script src="js/barVis.js"></script>
 <script src="js/countVis.js"></script>
 <script src="js/sankeyVis.js"></script>
+<script src="js/spiderVis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
