--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
 <div class="container-fluid">
@@ -35,7 +36,12 @@
                 <div id="barvis"></div>
 <!--                <div id="clustervis">cluster viz placeholder</div>-->
                 <div id="sankeyvis"></div>
-                <div id="spidervis">spider viz placeholder</div>
+                <div id="spidervis">
+                    <label class="switch" id="american-toggle">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
             </div>
         </div>
     </div>
