time period changes bar graph

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Museum Representation</title>
+    <title>Representation at the Museum of Modern Art</title>
 
     <!-- Load Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,400,300,400italic,700' rel='stylesheet'
@@ -26,7 +26,7 @@
         </li>
         <li>
             <a href="#countvis"><span class="cd-dot"></span>
-                <span class="cd-label">Acquisitions</span>
+                <span class="cd-label">Acquisitions by Gender</span>
             </a>
         </li>
         <li>
@@ -56,16 +56,17 @@
 
                 <!-- Headline -->
                 <h1 id="header" class="align-self-center">
-                    Museum Representation
+                    Representation at the Museum of Modern Art
                 </h1>
             </div>
 
             <!-- content | map -->
             <div class="row">
-                <!-- Visualization placeholders -->
-                <div id="countvis"></div>
-                <div id="barvis"></div>
+                <div class="col-md-4"><div id="countvis"></div></div>
+                <div class="col-md-8"><div id="barvis"></div></div>
 <!--                <div id="clustervis">cluster viz placeholder</div>-->
+                </div>
+            <div class="row">
                 <div id="sankeyvis"></div>
                 <div id="spidervis">
                     <label class="switch" id="american-toggle">
