--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                 </div>
             <div class="row">
                 <div id="sankeyvis"></div>
-                <div id="spidervis">
-                    <label class="switch" id="american-toggle">
-                        <input type="checkbox">
-                        <span class="slider round"></span>
-                    </label>
+                <div id="spider">
+                    <button class="switch" id="american-toggle">
+                        American
+<!--                        <span class="slider round"></span>-->
+                    </button>
+                    <div id="spidervis"></div>
                 </div>
             </div>
         </div>
