--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@
         </div>
     </div>
     <div class="section" id="section5">
-        <div id="spidervis">
-            <label class="switch" id="american-toggle">
-                <input type="checkbox">
-                <span class="slider round"></span>
-            </label>
+        <div id="spider">
+            <button class="switch" id="american-toggle"> Switch
+            </button>
+            <div id="spidervis"></div>
         </div>
     </div>
 
