--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 <span class="cd-label">Spider Vis</span>
             </a>
         </li>
+        <li>
+            <a href="#artvis"><span class="cd-dot"></span>
+                <span class="cd-label">Art Vis</span>
+            </a>
+        </li>
     </ul>
 </div>
 
@@ -74,11 +79,13 @@
                         <span class="slider round"></span>
                     </label>
                 </div>
+                <div id="artvis"></div>
             </div>
         </div>
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -94,6 +101,7 @@
 <script src="js/countVis.js"></script>
 <script src="js/sankeyVis.js"></script>
 <script src="js/spiderVis.js"></script>
+<script src="js/artVis.js"></script>
 
 <!-- Load data, create visualizations -->
 <script src="js/main.js"></script>
