--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
         </div>
     </div>
     <div class="section" id="section3">
-        <div class="container-fluid h-100"></div>
+        <div class="container-fluid h-100">
         <div id="sankeyvis"></div>
+        </div>
     </div>
     <div class="section" id="section4">
         <div class="container-fluid h-100">
