added art vis to index.html

--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
         </div>
     </div>
     <div class="section" id="section8">
-        <div id="spidervis">
-
-        </div>
+        <div id="artvis"></div>
     </div>
     <div class="section" id="section9">
         <div class="container-fluid h-100">
