--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
                 <div class="col-md-4"><div id="countvis"></div></div>
                 <div class="col-md-8"><div id="barvis"></div></div>
             </div>
-            <div class="row"></div>
+            <div class="row">
+                <h5>Brush over the acquisition chart to see how representation changed by department as new works were acquired.</h5>
+                <span>Period selected:</span>
+
+                <div id="time-boxes">
+                    <div class="child" id="time-period-min" style="width:100px;height:30px; background:#f2f2f2;border:0px solid #000;" align="middle">1929</div>
+                    <p class="child" align="middle"> – </p>
+                    <div class="child" id="time-period-max" style="width:100px;height:30px; background:#f2f2f2;border:0px solid #000;" align="middle">2021</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="section" id="section2">
@@ -153,6 +162,9 @@
             </div>
             <div class="row">
                 <h5><br><a href="https://github.com/MuseumofModernArt/collection">MoMA Github Open Data</a></h5>
+            </div>
+            <div class="row">
+                <h4><br><br>Created by: Karen Chen, Eleanor Eng, & Cindy Tian</h4>
             </div>
         </div>
     </div>
