--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
         </li>
         <li>
             <a href="#artvis"><span class="cd-dot"></span>
-                <span class="cd-label">Art Vis</span>
+                <span class="cd-label">Top Female Artists Represented in the MoMA Collection</span>
+            </a>
+        </li>
+        <li>
+            <a href="#section9"><span class="cd-dot"></span>
+                <span class="cd-label">Further Readings</span>
             </a>
         </li>
     </ul>
@@ -125,16 +130,14 @@
             <div id="spidervis"></div>
         </div>
     </div>
+
     <div class="section">
         <div class="container-fluid h-100">
-            <div class="row">
-                <div id="header" class="align-self-center">
+                <div id="header2" class="align-self-center">
                     <h3>While women artists remain marginalized in the museum collection, we should celebrate the pioneers and explore the diversity one can find within the collection today.<br></h3>
                     <h4><br>Especially after Linda Nochlin's seminal essay, "Why Have There Been No Great Women Artists" was released in 1971, people today agree that women artists are in a much better position today than they were decades ago.
                     </h4>
                 </div>
-
-            </div>
         </div>
     </div>
     <div class="section" id="section7">
