--- a/index.html
+++ b/index.html
@@ -126,8 +126,15 @@
     </div>
     <div class="section" id="section5">
         <div id="spider">
-            <button class="switch" id="american-toggle"> Switch</button>
-            <div id="spidervis"></div>
+            <div class="row">
+                <div class="col-sm-4 col align-self-center">
+                    <p>Click the Switch button to switch from the top 8 Nationalities including American.</p>
+                    <button class="button" id="american-toggle">Switch</button>
+                </div>
+                <div class="col-sm-8 d-flex justify-content-center text-center">
+                    <div id="spidervis"></div>
+                </div>
+            </div>
         </div>
     </div>
 
