--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
     <div class="section" id="section4">
         <div class="container-fluid h-100">
             <div class="row">
-                <h4>SAMPLE TEXT EXPLAINING THE POINT WE ARE TRYING TO MAKE</h4>
-                <h5><br>Some explanation of how to interact with the viz?</h5>
+                <h4>Let's further explore the disparity between the artist genders and overall Nationality representation in the MoMA. In the spider graph below, we can see how big of a difference there is in the number male and female artists by Nationality. Within the MoMA, a large majority of the artworks come from American artists. </h4>
+                <h5><br>Explore the spider graph below to see how the distributions change when ranked by the top 8 female nationalities both including and excluding Americans. </h5>
             </div>
         </div>
     </div>
     <div class="section" id="section5">
         <div id="spider">
             <div class="row">
-                <div class="col-sm-4 col align-self-center">
-                    <p>Click the Switch button to switch from the top 8 Nationalities including American.</p>
-                    <button class="button" id="american-toggle">Switch</button>
-                </div>
                 <div class="col-sm-8 d-flex justify-content-center text-center">
                     <div id="spidervis"></div>
+                </div>
+                <div class="col-sm-4 col align-self-center">
+                    <p>Click the Switch button to toggle on and off American representation.</p>
+                    <button class="button" id="american-toggle">Switch</button>
                 </div>
             </div>
         </div>
