nav anchors to sections

--- a/index.html
+++ b/index.html
@@ -22,31 +22,51 @@
     <ul>
         <li>
             <a href="#header"><span class="cd-dot"></span>
-                <span class="cd-label">Title</span>
+                <span class="cd-label">Motivation</span>
             </a>
         </li>
         <li>
-            <a href="#countvis"><span class="cd-dot"></span>
+            <a href="#section0"><span class="cd-dot"></span>
+                <span class="cd-label">History</span>
+            </a>
+        </li>
+        <li>
+            <a href="#section1"><span class="cd-dot"></span>
                 <span class="cd-label">Acquisitions by Gender</span>
             </a>
         </li>
         <li>
-            <a href="#barvis"><span class="cd-dot"></span>
-                <span class="cd-label">Male vs Female Artist Representation by Department</span>
+            <a href="#section2"><span class="cd-dot"></span>
+                <span class="cd-label">Disparities in Representation</span>
             </a>
         </li>
         <li>
-            <a href="#sankeyvis"><span class="cd-dot"></span>
+            <a href="#section3"><span class="cd-dot"></span>
                 <span class="cd-label">Gender, Nationality, and Art Classification Relationships</span>
             </a>
         </li>
         <li>
-            <a href="#spidervis"><span class="cd-dot"></span>
-                <span class="cd-label">Spider Vis</span>
+            <a href="#section4"><span class="cd-dot"></span>
+                <span class="cd-label">Further Exploration</span>
             </a>
         </li>
         <li>
-            <a href="#artvis"><span class="cd-dot"></span>
+            <a href="#section5"><span class="cd-dot"></span>
+                <span class="cd-label">Gender and Nationality Correlation</span>
+            </a>
+        </li>
+        <li>
+            <a href="#header2"><span class="cd-dot"></span>
+                <span class="cd-label">Female Artists</span>
+            </a>
+        </li>
+        <li>
+            <a href="#section7"><span class="cd-dot"></span>
+                <span class="cd-label">Conclusion</span>
+            </a>
+        </li>
+        <li>
+            <a href="#section8"><span class="cd-dot"></span>
                 <span class="cd-label">Top Female Artists Represented in the MoMA Collection</span>
             </a>
         </li>
@@ -64,10 +84,10 @@
 
             <!-- header -->
 
-            <div class="section">
+            <div class="section" id="header">
                 <!-- Headline -->
                 <div class="container-fluid h-100">
-                    <div id="header" class="align-self-center">
+                    <div  class="align-self-center">
                         <h1>Diverse artist representation has long been an issue in art museums, but has this changed in our contemporary times?</h1>
                         <h5>Take a look at artist representation data from one of the most well-recognized collections of modern art: The Museum of Modern Art (MoMA).</h5>
                     </div>
@@ -138,9 +158,9 @@
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="header2">
         <div class="container-fluid h-100">
-                <div id="header2" class="align-self-center">
+                <div class="align-self-center">
                     <h3>While women artists remain marginalized in the museum collection, we should celebrate the pioneers and explore the diversity one can find within the collection today.<br></h3>
                     <h4><br>Especially after Linda Nochlin's seminal essay, "Why Have There Been No Great Women Artists" was released in 1971, people today agree that women artists are in a much better position today than they were decades ago.
                     </h4>
