--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div id="spidervis"></div>
                 </div>
                 <div class="col-sm-4 col align-self-center">
-                    <p>Click the Switch button to toggle on and off American representation.</p>
+                    <p>Click the Switch button to include/not include American data.</p>
                     <button class="button" id="american-toggle">Switch</button>
                 </div>
             </div>
