added x axis description for last viz

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="section" id="section8">
         <div id="artvis"></div>
         <div class="row">
-            <h5>Hover over each bar to view a sample of the artists' work.</h5>
+            <h5>Hover over each bar to view a sample of the artists' work. The label to the right of each bar indicates the number of artworks by that specific artist that the MOMA contains.</h5>
         </div>
     </div>
     <div class="section" id="section9">
